--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,9 @@
 hr {
     width: 90%;
 }
+
+ion-content {
+    background-color: #808289;
+    --ion-background-color:#f7f8f8;
+    --padding-top: 10%;
+}
