--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,21 @@
+<ion-header [translucent]="true">
+    <ion-toolbar>
+      <ion-title>
+        Log in 
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+
 <ion-content>
     <ion-grid>
         <ion-row>
             <div class="container">
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Usuario</label>
-                    <input type="email" [(ngModel)]="email" class="form-control" id="email">
+                    <ion-label color="dark" for="email" class="form-label" >Usuario (Email)</ion-label>                    
+                    <ion-input inputmode="email" type="email" required="true" placeholder="Email" [(ngModel)]="email"id="email">
+
+                    </ion-input>
+                    <input type="email"  [(ngModel)]="email" class="form-control" id="email">
                 </div>
 
                 <div class="mb-3">
