--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
-    <ion-toolbar >        
+    <ion-toolbar>
         <ion-title slot="secondary">
-            <ion-chip >
+            <ion-chip>
                 <ion-avatar>
                     <img src="{{userProfile.photoURL || 'assets/images/helloworld.jpeg'}}">
                 </ion-avatar>
@@ -12,6 +12,25 @@
 </ion-header>
 
 <ion-content>
-    
+
+    <ion-list>
+        <ion-item-sliding>
+          <ion-item>
+            <ion-label>Item</ion-label>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-item-option >Unread</ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+      
+        <ion-item-sliding>
+          <ion-item>
+            <ion-label>Item</ion-label>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-item-option >Unread</ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
 
 </ion-content>
